# c-rez

./: .gitignore  CMakeLists.txt  README.md
src/: c-rez-add-c-rez.cmake  c-rez-config.cmake  c-rez-cpack.cmake  c-rez.c
